fix(tag-list): fix align issue with c-content class in client

--- a/src/components/TagList/TagList.scss
+++ b/src/components/TagList/TagList.scss
@@ -14,25 +14,27 @@
 	}
 }
 
-.c-tag {
-	background-color: #fff;
-	border: 1px solid $color-gray-150;
-	border-radius: 2.4rem;
-	padding: 0.3rem 1.6rem;
-	display: flex;
-	align-items: center;
-	color: $color-gray-700;
-	text-decoration: none;
+.c-content {
+	.c-tag {
+		background-color: #fff;
+		border: 1px solid $color-gray-150;
+		border-radius: 2.4rem;
+		padding: 0.3rem 1.6rem;
+		display: flex;
+		align-items: center;
+		color: $color-gray-700;
+		text-decoration: none;
 
-	// Label
-	&.c-tag__label {
-		white-space: nowrap;
-		flex: 1 1 100%;
-	}
+		// Label
+		&.c-tag__label {
+			white-space: nowrap;
+			flex: 1 1 100%;
+		}
 
-	&.c-tag__active {
-		background-color: $color-teal-bright;
-		color: white;
+		&.c-tag__active {
+			background-color: $color-teal-bright;
+			color: white;
+		}
 	}
 }
 
